--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -409,7 +409,7 @@ progress {
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
-  --bs-purple: #ffa733;
+  --bs-purple: #000000;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
@@ -430,7 +430,7 @@ progress {
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #ffa733;
+  --bs-primary: #000000;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -438,7 +438,7 @@ progress {
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 167, 51;
+  --bs-primary-rgb: 0, 0, 0;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -469,8 +469,8 @@ progress {
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #ffa733;
-  --bs-link-hover-color: #cc8629;
+  --bs-link-color: #000000;
+  --bs-link-hover-color: black;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -553,13 +553,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #ffedd6;
-  --bs-table-border-color: #e6d5c1;
-  --bs-table-striped-bg: #f2e1cb;
+  --bs-table-bg: #cccccc;
+  --bs-table-border-color: #b8b8b8;
+  --bs-table-striped-bg: #c2c2c2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6d5c1;
+  --bs-table-active-bg: #b8b8b8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ecdbc6;
+  --bs-table-hover-bg: #bdbdbd;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -1961,7 +1961,7 @@ progress {
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
-  --bs-purple: #ffa733;
+  --bs-purple: #000000;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
@@ -1982,7 +1982,7 @@ progress {
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #ffa733;
+  --bs-primary: #000000;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -1990,7 +1990,7 @@ progress {
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 255, 167, 51;
+  --bs-primary-rgb: 0, 0, 0;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -2021,8 +2021,8 @@ progress {
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #ffa733;
-  --bs-link-hover-color: #cc8629;
+  --bs-link-color: #000000;
+  --bs-link-hover-color: black;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -2034,8 +2034,8 @@ progress {
 }
 
 .text-bg-primary {
-  color: #000 !important;
-  background-color: RGBA(255, 167, 51, var(--bs-bg-opacity, 1)) !important;
+  color: #fff !important;
+  background-color: RGBA(0, 0, 0, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -2074,10 +2074,10 @@ progress {
 }
 
 .link-primary {
-  color: #ffa733 !important;
+  color: #000000 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #ffb95c !important;
+  color: black !important;
 }
 
 .link-secondary {
@@ -6233,16 +6233,16 @@ progress {
 
 .has-purple-color,
 .has-purple-color:visited {
-  color: #ffa733;
+  color: #000000;
 }
 
 .has-purple-background-color {
-  background-color: #ffa733;
-  border-color: #ffa733;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .wp-block-button:hover .wp-block-button__link.has-white-background-color.has-purple-color {
-  color: #ffa733;
+  color: #000000;
 }
 
 .has-pink-color,
@@ -6401,16 +6401,16 @@ progress {
 
 .has-primary-color,
 .has-primary-color:visited {
-  color: #ffa733;
+  color: #000000;
 }
 
 .has-primary-background-color {
-  background-color: #ffa733;
-  border-color: #ffa733;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .wp-block-button:hover .wp-block-button__link.has-white-background-color.has-primary-color {
-  color: #ffa733;
+  color: #000000;
 }
 
 .has-secondary-color,
